--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 
-<body>
-
+<body id="bootstrapoverrides">
+testing
     <!-- Navigation -->
     <!--<a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
     <nav id="sidebar-wrapper">
@@ -109,13 +109,13 @@
   </div>
 </div>
 
-<!--<div class="container-fluid">
-<div class="row-fluid">
-<div class="col-lg-offset-9 col-lg-3 ">
+<div class="container">
+<div class="row">
+<div id="writings" class="col-lg-offset-3 col-lg-3">
     TESTING
 </div>
 </div>
-</div>-->
+</div>
 
 
  
