--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
 </head>
 
 <body id="bootstrapoverrides">
-testing
     <!-- Navigation -->
     <!--<a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
     <nav id="sidebar-wrapper">
@@ -78,15 +77,13 @@ testing
 
 
         <div class="text-vertical-center">
-            <!--<h2>Hi, I'm </h2>-->
-            <h1>Dylan Scott Cobean</h1>
-            <h5>Environmentalist / Urbanist / Cartagrapher / Data Analyst</h5>
+            <h2>DYLAN SCOTT COBEAN</h2>
+            <h5>Environmentalist / Urbanist / Cartographer / Data Analyst</h5>
             <hr class="medium">
             <!--<h3>A Personal Webpage</h3>-->
             <div container>
 <div class="text-center center-block site-header">
-    <!--<a href="pdf/Resume.pdf" download="DylanCobean_Resume.pdf" title="Resume" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-file-text-o fa-3x social-rm grow"></i></a>-->
-    <span title="Resume" data-toggle="tooltip" data-placement="bottom"><id="enablehovercoverwithoutfocuscolor" a href="#" class="fa fa-file-text-o fa-3x social-rm grow" data-toggle="modal" data-target="#myModal" style="outline: 0px; text-decoration: initial; "></a></span><a href="https://www.linkedin.com/in/dylancobean" title="Linkedin" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-linkedin fa-3x social-fb grow"></i></a>
+    <a href="#" title="Resume" data-toggle="tooltip" data-placement="bottom"><id="enablehovercoverwithoutfocuscolor" class="fa fa-file-text-o fa-3x social-rm grow" data-toggle="modal" data-target="#myModal" style="outline: 0px; text-decoration: initial; "></a><a href="https://www.linkedin.com/in/dylancobean" title="Linkedin" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-linkedin fa-3x social-fb grow"></i></a>
     <a href="https://github.com/dylansc22" title="Github" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-github fa-3x social-gp grow"></i></a>
     <a href="mailto:dylan.cobean@gmail.com" title="Email" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-envelope fa-3x social-em grow"></i></a>
     <a href="https://twitter.com/MrDylanScott" title="Twitter" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-twitter fa-3x social-tw grow"></i></a>
@@ -99,20 +96,47 @@ testing
       
       <div class="modal-header">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <!-- Don't need the download button for now, because there is a save button in the pdf viewer
-        <button type="button" class="btn btn-warning"><a href="pdf/Resume.pdf" download="DylanCobean_Resume.pdf"></a>Download</button>-->
+        <!-- Don't need the download button for now, because there is a save button in the pdf viewer-->
+        <button type="button" class="btn btn-primary"><a href="pdf/Resume.pdf" download="DylanCobean_Resume.pdf"></a>Download</button>
       </div>
       <div class="modal-body">
-        <embed src="pdf/Resume.pdf" width="100%" height="800px" type='application/pdf'>
+        <iframe src="https://drive.google.com/file/d/0BxUFaFhM2TB8cmJzNDhPZGRaY0E/preview" width="100%" height="800"></iframe>
       </div>
     </div>
   </div>
 </div>
 
-<div class="container">
+<div class="container projectsgroup">
 <div class="row">
-<div id="writings" class="col-lg-offset-3 col-lg-3">
-    TESTING
+
+<div class="col-lg-offset-2 col-lg-2">
+<button type="button" class="btn btn-warning btn-lg buttonstyle">
+  <i class="fa fa-book fa-3x"></i> Writing Samples
+</button>
+</div>
+<div class="col-lg-offset-1 col-lg-2">
+<button type="button" class="btn btn-warning btn-lg buttonstyle">
+  <i class="fa fa-map-o fa-3x"></i> GIS Maps
+</button>
+</div>
+<div class="col-lg-offset-1 col-lg-2">
+<button type="button" class="btn btn-warning btn-lg buttonstyle">
+  <i class="fa fa-pencil-square-o fa-3x"></i> Other Projects
+</button>
+</div>
+</div>
+
+
+
+
+<div class="col-lg-offset-2 projects col-lg-2">
+    Writing Samples
+</div>
+<div class="col-lg-offset-1 projects col-lg-2">
+    GIS Maps
+</div>
+<div class="col-lg-offset-1 projects col-lg-2">
+    Other Projects
 </div>
 </div>
 </div>
