--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+
+
+<!--OLD MAPBOX LIBRARIES
+<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+<script src='https://api.mapbox.com/mapbox.js/v2.2.4/mapbox.js'></script>
+<link href='https://api.mapbox.com/mapbox.js/v2.2.4/mapbox.css' rel='stylesheet' />-->
+
+<!--NEW MAPBOX LIBRARIES-->
+<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.13.1/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.13.1/mapbox-gl.css' rel='stylesheet' />
+    <style>
+        body { margin:0; padding:0; }
+        #map { position:absolute; top:0; bottom:0; width:100%; }
+    </style>
 </head>
 
 <body id="bootstrapoverrides">
@@ -81,35 +96,28 @@
             <h5>Environmentalist / Urbanist / Cartographer / Data Analyst</h5>
             <hr class="medium">
             <!--<h3>A Personal Webpage</h3>-->
-            <div container>
+<div container>
 <div class="text-center center-block site-header">
     <a href="#" title="Resume" data-toggle="tooltip" data-placement="bottom"><id="enablehovercoverwithoutfocuscolor" class="fa fa-file-text-o fa-3x social-rm grow" data-toggle="modal" data-target="#myModal" style="outline: 0px; text-decoration: initial; "></a><a href="https://www.linkedin.com/in/dylancobean" title="Linkedin" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-linkedin fa-3x social-fb grow"></i></a>
     <a href="https://github.com/dylansc22" title="Github" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-github fa-3x social-gp grow"></i></a>
     <a href="mailto:dylan.cobean@gmail.com" title="Email" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-envelope fa-3x social-em grow"></i></a>
     <a href="https://twitter.com/MrDylanScott" title="Twitter" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-twitter fa-3x social-tw grow"></i></a>
     <!-- Button trigger modal -->
+</div>
+    </div>
+  </div>
 
-    <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      
-      <div class="modal-header">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <!-- Don't need the download button for now, because there is a save button in the pdf viewer-->
-        <button type="button" class="btn btn-primary"><a href="pdf/Resume.pdf" download="DylanCobean_Resume.pdf"></a>Download</button>
-      </div>
+
+
       <div class="modal-body">
         <iframe src="https://drive.google.com/file/d/0BxUFaFhM2TB8cmJzNDhPZGRaY0E/preview" width="100%" height="800"></iframe>
       </div>
-    </div>
-  </div>
-</div>
+
 
 <div class="container projectsgroup">
-<div class="row">
+	<div class="row">
 
-<div class="col-lg-offset-2 col-lg-2">
+<!--<div class="col-lg-offset-2 col-lg-2">
 <button type="button" class="btn btn-warning btn-lg buttonstyle">
   <i class="fa fa-book fa-3x"></i> Writing Samples
 </button>
@@ -124,27 +132,49 @@
   <i class="fa fa-pencil-square-o fa-3x"></i> Other Projects
 </button>
 </div>
+</div>-->
+
+
+
+<div class="projects col-lg-offset-2 col-lg-8">
+    About Me
 </div>
-
-
-
-
-<div class="col-lg-offset-2 projects col-lg-2">
+<div class="projects col-lg-offset-2 col-lg-8">
     Writing Samples
 </div>
-<div class="col-lg-offset-1 projects col-lg-2">
+<div class="projects col-lg-offset-2 col-lg-8">
     GIS Maps
 </div>
-<div class="col-lg-offset-1 projects col-lg-2">
+<div class="projects col-lg-offset-2 col-lg-8">
     Other Projects
 </div>
+<!--<div class="projects col-lg-offset-2 col-lg-8">
+    Blog
+</div>-->
 </div>
 </div>
 
 
- 
-      <!-- Custom Javascript -->
-    <script src="js/main.js"></script>
+
 </body>
 
+
+
+<div id='map'></div>
+<script>
+mapboxgl.accessToken = 'pk.eyJ1IjoiZHlsYW5jIiwiYSI6Im53UGgtaVEifQ.RJiPqXwEtCLTLl-Vmd1GWQ';
+var map = new mapboxgl.Map({
+    container: 'map', // container id
+    style: 'mapbox://styles/dylanc/cikb1mqjd005v9um5d5k62dgt', //stylesheet location
+    center: [-111.1452, 32.2687], // starting position
+    zoom: 8 // starting zoom
+});
+</script>
+
+
+
+
+
+      <!-- Custom Javascript -->
+    <script src="js/main.js"></script>
 </html>
