--- a/index.html
+++ b/index.html
@@ -105,13 +105,29 @@
     <!-- Button trigger modal -->
 </div>
     </div>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      
+      <div class="modal-header">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <!-- Don't need the download button for now, because there is a save button in the pdf viewer-->
+        <button type="button" class="btn btn-primary"><a href="pdf/Resume.pdf" download="DylanCobean_Resume.pdf"></a>Download</button>
+      </div>
+      <div class="modal-body">
+        <iframe src="https://drive.google.com/file/d/0BxUFaFhM2TB8cmJzNDhPZGRaY0E/preview" width="100%" height="800"></iframe>
+      </div>
+    </div>
+  </div>
+</div>
+
   </div>
 
 
 
-      <div class="modal-body">
-        <iframe src="https://drive.google.com/file/d/0BxUFaFhM2TB8cmJzNDhPZGRaY0E/preview" width="100%" height="800"></iframe>
-      </div>
+
 
 
 <div class="container projectsgroup">
@@ -165,9 +181,9 @@
 mapboxgl.accessToken = 'pk.eyJ1IjoiZHlsYW5jIiwiYSI6Im53UGgtaVEifQ.RJiPqXwEtCLTLl-Vmd1GWQ';
 var map = new mapboxgl.Map({
     container: 'map', // container id
-    style: 'mapbox://styles/dylanc/cikb1mqjd005v9um5d5k62dgt', //stylesheet location
-    center: [-111.1452, 32.2687], // starting position
-    zoom: 8 // starting zoom
+    style: 'mapbox://styles/dylanc/cikb2yvtr00589fm13z417kdu', //stylesheet location
+    center: [-113.952, 32.487], // starting position
+    zoom: 7 // starting zoom
 });
 </script>
 
