gorgeous landing page, with function slow fly map background

--- a/index.html
+++ b/index.html
@@ -175,16 +175,66 @@
 </body>
 
 
-
+<style>
+    #fly {
+        display: block;
+        position: relative;
+        margin: 0px auto;
+        width: 50%;
+        height: 40px;
+        padding: 10px;
+        border: none;
+        border-radius: 3px;
+        font-size: 12px;
+        text-align: center;
+        color: #fff;
+        background: #ee8a65;
+    }
+</style>
 <div id='map'></div>
+<br/>
+<button onclick='fly();' id='fly'>Fly</button>
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoiZHlsYW5jIiwiYSI6Im53UGgtaVEifQ.RJiPqXwEtCLTLl-Vmd1GWQ';
+var start = [-113.75, 34];
+var end = [-77.50, 38];
 var map = new mapboxgl.Map({
-    container: 'map', // container id
-    style: 'mapbox://styles/dylanc/cikb2yvtr00589fm13z417kdu', //stylesheet location
-    center: [-113.952, 32.487], // starting position
-    zoom: 7 // starting zoom
+    container: 'map',
+    style: 'mapbox://styles/dylanc/cikb2yvtr00589fm13z417kdu',
+    center: start,
+    zoom: 7
 });
+
+var isAtStart = true;
+
+function fly() {
+    // depending on whether we're currently at point a or b, aim for
+    // point a or b
+    var target = isAtStart ? end : start;
+
+    // and now we're at the opposite point
+    isAtStart = !isAtStart;
+
+    map.flyTo({
+        // These options control the ending camera position: centered at
+        // the target, at zoom level 9, and north up.
+        center: target,
+        zoom: 9,
+        bearing: 0,
+
+        // These options control the flight curve, making it move
+        // slowly and zoom out almost completely before starting
+        // to pan.
+        speed: 0.005, // make the flying slow
+        curve: .1, // change the speed at which it zooms out
+
+        // This can be any easing function: it takes a number between
+        // 0 and 1 and returns another number between 0 and 1.
+        easing: function (t) {
+            return t;
+        }
+    });
+}
 </script>
 
 
