--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <div class="modal-header">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <!-- Don't need the download button for now, because there is a save button in the pdf viewer-->
-        <button type="button" class="btn btn-primary"><a href="pdf/Resume.pdf" download="DylanCobean_Resume.pdf"></a>Download</button>
+        <a type="button" href="pdf/Resume.pdf" class="btn btn-primary" download="DylanCobean_Resume.pdf">Download</a>
       </div>
       <div class="modal-body">
         <iframe src="https://drive.google.com/file/d/0BxUFaFhM2TB8cmJzNDhPZGRaY0E/preview" width="100%" height="800"></iframe>
@@ -152,16 +152,16 @@
 
 
 
-<div class="projects col-lg-offset-2 col-lg-8">
+<div class="projects col-lg-offset-3 col-lg-6">
     About Me
 </div>
-<div class="projects col-lg-offset-2 col-lg-8">
+<div class="projects col-lg-offset-3 col-lg-6">
     Writing Samples
 </div>
-<div class="projects col-lg-offset-2 col-lg-8">
+<div class="projects col-lg-offset-3 col-lg-6">
     GIS Maps
 </div>
-<div class="projects col-lg-offset-2 col-lg-8">
+<div class="projects col-lg-offset-3 col-lg-6">
     Other Projects
 </div>
 <!--<div class="projects col-lg-offset-2 col-lg-8">
