project buttons now have opperational/animated subinfo pop-ups on hover

--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 
     <title>Stylish Portfolio - Start Bootstrap Theme</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
@@ -133,37 +131,22 @@
 <div class="container projectsgroup">
 	<div class="row">
 
-<!--<div class="col-lg-offset-2 col-lg-2">
-<button type="button" class="btn btn-warning btn-lg buttonstyle">
-  <i class="fa fa-book fa-3x"></i> Writing Samples
-</button>
-</div>
-<div class="col-lg-offset-1 col-lg-2">
-<button type="button" class="btn btn-warning btn-lg buttonstyle">
-  <i class="fa fa-map-o fa-3x"></i> GIS Maps
-</button>
-</div>
-<div class="col-lg-offset-1 col-lg-2">
-<button type="button" class="btn btn-warning btn-lg buttonstyle">
-  <i class="fa fa-pencil-square-o fa-3x"></i> Other Projects
-</button>
-</div>
-</div>-->
-
-
-
-<div class="projects col-lg-offset-3 col-lg-6">
+<button type="button" class="projects col-lg-offset-3 col-lg-6">
     About Me
-</div>
-<div class="projects col-lg-offset-3 col-lg-6">
+    <div class="buttonbackground">Subinfo</div>
+</button>
+<button type="button" class="projects col-lg-offset-3 col-lg-6">
     Writing Samples
-</div>
-<div class="projects col-lg-offset-3 col-lg-6">
+    <div class="buttonbackground">Subinfo</div>
+</button>
+<button type="button" class="projects col-lg-offset-3 col-lg-6">
     GIS Maps
-</div>
-<div class="projects col-lg-offset-3 col-lg-6">
+    <div class="buttonbackground">Subinfo</div>
+</button>
+<button type="button" class="projects col-lg-offset-3 col-lg-6">
     Other Projects
-</div>
+    <div class="buttonbackground">Subinfo</div>
+</button>
 <!--<div class="projects col-lg-offset-2 col-lg-8">
     Blog
 </div>-->
