--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -79,19 +79,20 @@
 
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoiZHlsYW5jIiwiYSI6Im53UGgtaVEifQ.RJiPqXwEtCLTLl-Vmd1GWQ';
-var start = [-111.75, 32.5];
-var end = [-77.50, 38];
+//var start = [-111.75, 32.5];
+//var end = [-77.50, 38];
+//var start = [-110.6, 32.275];
+var start = [-110.6, 32.32];
 var mapvar = new mapboxgl.Map({
 	//attributionControl: false,
     container: 'mapidheader',
     style: 'mapbox://styles/dylanc/cikb2yvtr00589fm13z417kdu',
     center: start,
-    zoom: 9,
-    attribution: "testing",
+    zoom: 10,
 });
 
 
-var isAtStart = true;
+/*var isAtStart = true;
 
 function fly() {
     // depending on whether we're currently at point a or b, aim for
@@ -126,7 +127,7 @@ function fly() {
 $( document ).ready(function() {
   fly();
 });
-
+*/
 </script>
 
 <body id="bootstrapoverrides">
