functioning skype contact button

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -161,8 +161,8 @@ $( document ).ready(function() {
 
 
 <div class="text-vertical-center">
-	<h1>DYLAN SCOTT COBEAN</h1>
-	<h5>Environmentalist / Urbanist / Cartographer / Data Analyst</h5>
+	<h1>ABOUT ME</h1>
+	<h4>Graduated with Distinction as a Duel Major in Applied Math & Envnironmental Hydrology<br>I have years of GIS and experience for large research institutions and small non-profits</h4>
 	<hr class="medium">
 	<!--<h3>A Personal Webpage</h3>-->
 	<div container>
@@ -171,6 +171,7 @@ $( document ).ready(function() {
 			<a href="https://github.com/dylansc22" title="Github" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-github fa-3x social-gp grow"></i></a>
 			<a href="mailto:dylan.cobean@gmail.com" title="Email" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-envelope fa-3x social-em grow"></i></a>
 			<a href="https://twitter.com/MrDylanScott" title="Twitter" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-twitter fa-3x social-tw grow"></i></a>
+            <a href="skype:dylanvideochat?userinfo" title="Skype" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-skype fa-3x social-sk grow"></i></a>
 		</div>
     </div>
 </div>
