--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.13.1/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.13.1/mapbox-gl.css' rel='stylesheet' />
+
+
+<!--Skype Call Button-->
+<script type="text/javascript" src="http://www.skypeassets.com/i/scom/js/skype-uri.js"></script>
+
+
 </head>
 <style>
     #fly {
@@ -132,6 +138,7 @@ $( document ).ready(function() {
 
 </script>
 
+
 <body id="bootstrapoverrides">
     <!-- Navigation -->
     <!--<a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
@@ -164,7 +171,7 @@ $( document ).ready(function() {
 
 <div class="text-vertical-center">
 	<h1>DYLAN SCOTT COBEAN</h1>
-	<h5>Environmentalist / Urbanist / Cartographer / Data Analyst</h5>
+	<h4>Environmentalist / Urbanist / Cartographer / Data Analyst</h4>
 	<hr class="medium">
 	<!--<h3>A Personal Webpage</h3>-->
 	<div container>
@@ -173,6 +180,7 @@ $( document ).ready(function() {
 			<a href="https://github.com/dylansc22" title="Github" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-github fa-3x social-gp grow"></i></a>
 			<a href="mailto:dylan.cobean@gmail.com" title="Email" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-envelope fa-3x social-em grow"></i></a>
 			<a href="https://twitter.com/MrDylanScott" title="Twitter" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-twitter fa-3x social-tw grow"></i></a>
+			<a href="skype:dylanvideochat?userinfo" title="Skype" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-skype fa-3x social-sk grow"></i></a>
 		</div>
     </div>
 </div>
