--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ $(function() {
 
 <body id="bootstrapoverrides">
 
-    <!-- Navigation -->
+    <!-- Navigation Bar-->
     <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars fa-2x"></i></a>
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
@@ -184,6 +184,7 @@ $(function() {
         </ul>
     </nav>
 
+    <!--Contact Info Card-->
 	<div class="container">
 		<div class="row">
 			<div id="contactinfo" class="text-vertical-center col-xs-12">
@@ -218,7 +219,7 @@ $(function() {
 		
 
 
-
+	<!--About Me Section-->
 	<div id="aboutme" class="sectioninfo">
 		<div class="container">
 			<div class="row">
@@ -226,7 +227,7 @@ $(function() {
 					<h1>ABOUT ME.<br>______________</h1>
 
 				</div>
-				<div class="col-xs-offset-1 col-xs-11 sectioncontent">
+				<div class="col-xs-offset-1 col-xs-10 sectioncontent">
 					<h4>
 
 					I graduated with distiction from the University of Arizona in the Spring of 2013.
@@ -256,6 +257,109 @@ $(function() {
 			</div>
 		</div>
 	</div>
+
+	<!--Work Sample Section-->
+	<div id="worksamples" class="sectioninfo">
+		<div class="container">
+			<div clas="row">
+				<div class="col-xs-12 sectiontitle">
+					<h1>WORK SAMPLES.<br>______________</h1>
+				</div>
+			
+
+			</div>
+		</div>
+
+		<div class="col-lg-4 col-xs-6">
+                    <a href="#" class="portfolio-box">
+                        <img src="img/ffw2.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-xs-6">
+                    <a href="#" class="portfolio-box">
+                        <img src="img/USGSReport.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-xs-6">
+                    <a href="#" class="portfolio-box">
+                        <img src="img/Tucson3.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-xs-6">
+                    <a href="#" class="portfolio-box">
+                        <img src="http://www.petpicturegallery.com/pictures/cats/funnycat/134-cat_funnycat_funny_cat_12.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-xs-6">
+                    <a href="#" class="portfolio-box">
+                        <img src="http://www.petpicturegallery.com/pictures/cats/funnycat/134-cat_funnycat_funny_cat_12.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-xs-6">
+                    <a href="#" class="portfolio-box">
+                        <img src="http://www.petpicturegallery.com/pictures/cats/funnycat/134-cat_funnycat_funny_cat_12.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Category
+                                </div>
+                                <div class="project-name">
+                                    Project Name
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
 		
 
 
