cleaning up the page and liking it more

--- a/index.html
+++ b/index.html
@@ -200,17 +200,23 @@ $(function() {
 						<a href="skype:dylanvideochat?userinfo" title="Skype" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-skype fa-3x social-sk grow"></i></a>
 					</div>
 
+					<!--
 					<div class="projectsgroup">
 						<div class="row">
 							<button type="button" class="projects col-xs-offset-3 col-xs-6"><a href="#aboutme"><h4>About Me</h4>
 					    	<div class="buttonbackground">Subinfo</div>
 							</a></button>
 			    		</div>
-			    	</div>
+			    	</div>-->
 
-			    	<div style="margin-bottom: 50px">
-						<div class="row">
-						<button class="text-vertical-center col-xs-2 col-xs-offset-5" onclick='fly();' id='fly'>Pause Map</button>
+					<div class="row">
+						<div id="contactinfofooter" class="text-vertical-center col-xs-12">
+						<button class="col-xs-2 col-xs-offset-5" onclick='fly();' id='fly'>Pause Map</button>
+							<div id="contactinfofootersentense" class="col-xs-offset-2 col-xs-8">
+							<h4><i>Welcome to my self-built website. A showcase of my on-going post-college education. <br>
+
+							Click below to learn more...</i></h4>
+							</div>
 						</div>
 					</div>
 			</div>
@@ -271,7 +277,7 @@ $(function() {
 		</div>
 
 		<div class="col-lg-4 col-xs-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="https://dylansc22.github.io/worksample/" class="portfolio-box">
                         <img src="img/ffw2.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -286,7 +292,7 @@ $(function() {
                     </a>
                 </div>
                 <div class="col-lg-4 col-xs-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="http://pubs.usgs.gov/sir/2011/5166/" class="portfolio-box">
                         <img src="img/USGSReport.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
