--- a/index.html
+++ b/index.html
@@ -27,17 +27,18 @@
 	<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 	<!-- Mapbox Css and Js Libraries-->
    	<script src='https://api.tiles.mapbox.com/mapbox.js/v2.2.3/mapbox.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox.js/v2.2.3/mapbox.css' rel='stylesheet' />
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -137,21 +138,6 @@ $( document ).ready(function() {
 });
 
 
-/*Enables smooth scrolling between different anchors of my onepage portfolio*/
-$(function() {
-  $('a[href*="#"]:not([href="#"])').click(function() {
-    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
-      var target = $(this.hash);
-      target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-      if (target.length) {
-        $('html, body').animate({
-          scrollTop: target.offset().top
-        }, 1000);
-        return false;
-      }
-    }
-  });
-});
 
 </script>
 
@@ -200,7 +186,23 @@ $(function() {
 						<a href="skype:dylanvideochat?userinfo" title="Skype" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-skype fa-3x social-sk grow"></i></a>
 					</div>
 
-					<!--
+					<div class="row">
+						<div id="contactinfofooter" class="text-vertical-center col-xs-12">
+
+
+						<button class="col-xs-2 col-xs-offset-5" onclick='fly();' id='fly'>Pause Map</button>
+							<div id="contactinfofootersentense" class="col-xs-offset-2 col-xs-8">
+							<a href="#mainnav" class="btn btn-circle page-scroll text-vertical-center">
+                            <i class="fa fa-3x fa-angle-double-down animated"></i>
+                        	</a>
+							<h4><i>Welcome to my self-built website. A showcase of my on-going post-college education. <br>
+
+							Click below to learn more...</i></h4>
+							</div>
+						</div>
+					</div>
+
+										<!--
 					<div class="projectsgroup">
 						<div class="row">
 							<button type="button" class="projects col-xs-offset-3 col-xs-6"><a href="#aboutme"><h4>About Me</h4>
@@ -208,32 +210,26 @@ $(function() {
 							</a></button>
 			    		</div>
 			    	</div>-->
-
-					<div class="row">
-						<div id="contactinfofooter" class="text-vertical-center col-xs-12">
-						<button class="col-xs-2 col-xs-offset-5" onclick='fly();' id='fly'>Pause Map</button>
-							<div id="contactinfofootersentense" class="col-xs-offset-2 col-xs-8">
-							<h4><i>Welcome to my self-built website. A showcase of my on-going post-college education. <br>
-
-							Click below to learn more...</i></h4>
-							</div>
-						</div>
-					</div>
 			</div>
 		</div>
-	</div>
+	</div><!--end container-->
 		
+<div id="mainnav" class="col-xs-12 text-vertical-center">
 
+	<!-- Nav tabs -->
+	  <ul class="nav nav-tabs" role="tablist">
+	    <li role="presentation" class="active col-xs-3"><a href="#aboutme" aria-controls="aboutme" role="tab" data-toggle="tab"><h1>ABOUT ME</h1></a></li>
+	    <li role="presentation" class="col-xs-3"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab"><h1>WORKSAMPLES</h1></a></li>
+	    <li role="presentation" class="col-xs-3"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab"><h1>TIMELINE</h1></a></li>
+	    <li role="presentation" class="col-xs-3"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab"><h1>BLOG</h1></a></li>
+	  </ul>
 
-	<!--About Me Section-->
-	<div id="aboutme" class="sectioninfo">
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-12 sectiontitle">
-					<h1>ABOUT ME.<br>______________</h1>
+</div>
 
-				</div>
-				<div class="col-xs-offset-1 col-xs-10 sectioncontent">
+	  <!-- Tab panes -->
+	  <div id="mainnavcontent" class="tab-content">
+	    <div role="tabpanel" class="tab-pane fade in active" id="aboutme">
+	    	<div class="col-xs-offset-1 col-xs-10 sectioncontent">
 					<h4>
 
 					I graduated with distiction from the University of Arizona in the Spring of 2013.
@@ -260,23 +256,9 @@ $(function() {
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
 				</div>
-			</div>
-		</div>
-	</div>
-
-	<!--Work Sample Section-->
-	<div id="worksamples" class="sectioninfo">
-		<div class="container">
-			<div clas="row">
-				<div class="col-xs-12 sectiontitle">
-					<h1>WORK SAMPLES.<br>______________</h1>
-				</div>
-			
-
-			</div>
-		</div>
-
-		<div class="col-lg-4 col-xs-6">
+	    </div>
+	    <div role="tabpanel" class="tab-pane fade" id="profile">
+	    	<div class="col-lg-4 col-xs-6">
                     <a href="https://dylansc22.github.io/worksample/" class="portfolio-box">
                         <img src="img/ffw2.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -366,11 +348,20 @@ $(function() {
                         </div>
                     </a>
                 </div>
+
+	    </div>
+	    <div role="tabpanel" class="tab-pane fade" id="messages">...</div>
+	    <div role="tabpanel" class="tab-pane fade" id="settings">...</div>
+	  </div>
+
+
+
+
 		
 
 
 
-</div>
+
 </div>
 
 
