--- a/index.html
+++ b/index.html
@@ -66,22 +66,7 @@
 
 
 </head>
-<style>
-    #fly {
-        display: block;
-        position: relative;
-        /* width:20%;   bootstrap div classes in the html currently handle the positioning, no longer using this default code*/
-        /*margin: 0px auto;bootstrap div classes in the html currently handle the positioning, no longer using this default code*/
-        height: 40px;
-        /*padding: 10px;bootstrap div classes in the html currently handle the positioning, no longer using this default code*/
-        border: none;
-        border-radius: 3px;
-        font-size: 12px;
-        text-align: center;
-        color: #fff;
-        background: #ee8a65;
-    }
-</style>
+
 <div id='mapid'></div>
 
 <script>
@@ -193,9 +178,8 @@ $( document ).ready(function() {
 						<div class="text-vertical-center col-xs-12 center-block">
 
 						<div id="enter" class="text-vertical-center">
-							Click to Enter
-							<a href="#mainnav" class="btn btn-circle page-scroll text-vertical-center center-block">
-                            <i class="fa fa-4x fa-angle-double-down animated"></i>
+                        	<a href="#mainnav" class="btn btn-circle page-scroll text-vertical-center center-block grow" title="Click to Learn More" data-toggle="tooltip" data-placement="top">
+                            <i class="fa fa-angle-double-down"></i>
                         	</a>
                         </div>
 
