--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 
 	<!-- Nav tabs -->
 	  <ul class="nav nav-tabs" role="tablist">
-	    <li role="presentation" class="active col-xs-3"><a href="#aboutme" aria-controls="aboutme" role="tab" data-toggle="tab"><h1>ABOUT ME</h1></a></li>
-	    <li role="presentation" class="col-xs-3"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab"><h1>WORKSAMPLES</h1></a></li>
-	    <li role="presentation" class="col-xs-3"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab"><h1>TIMELINE</h1></a></li>
-	    <li role="presentation" class="col-xs-3"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab"><h1>BLOG</h1></a></li>
+	    <li role="presentation" class="active col-xs-3"><a href="#aboutme" aria-controls="aboutme" role="tab" data-toggle="tab"><h2>ABOUT ME</h2></a></li>
+	    <li role="presentation" class="col-xs-3"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab"><h2>WORKSAMPLES</h2></a></li>
+	    <li role="presentation" class="col-xs-3"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab"><h2>TIMELINE</h2></a></li>
+	    <li role="presentation" class="col-xs-3"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab"><h2>BLOG</h2></a></li>
 	  </ul>
 
 </div>
@@ -105,7 +105,7 @@
 	  <!-- Tab panes -->
 	  <div id="mainnavcontent" class="tab-content">
 	  	<!--About Me Section-->
-	    <div role="tabpanel" class="tab-pane active" id="aboutme">
+	    <div role="tabpanel" class="tab-pane fade in active" id="aboutme">
 	    	<div class="col-xs-offset-1 col-xs-10 sectioncontent">
 					<h4>
 					I graduated with distiction from the University of Arizona in the Spring of 2013.
@@ -134,7 +134,7 @@
 
 
 	    <!--Worksample Section-->
-	    <div role="tabpanel" class="tab-pane" id="profile">
+	    <div role="tabpanel" class="tab-pane fade" id="profile">
 	    	<div class="col-lg-4 col-xs-6">
                     <a href="https://dylansc22.github.io/worksample/" class="portfolio-box">
                         <img src="img/ffw2.png" class="img-responsive" alt="">
@@ -228,9 +228,9 @@
 	    </div>
 
 	    <!--Timeline Section-->
-	    <div role="tabpanel" class="tab-pane" id="messages">...</div>
+	    <div role="tabpanel" class="tab-pane fade" id="messages">...</div>
 	    <!--Blog Section-->
-	    <div role="tabpanel" class="tab-pane" id="settings">...</div>
+	    <div role="tabpanel" class="tab-pane fade" id="settings">...</div>
 	  </div>
 
 
