tweaked order of welcome note, pause button, and CLICK TO ENTER

--- a/index.html
+++ b/index.html
@@ -55,6 +55,60 @@
 
 <body id="bootstrapoverrides">
 <div id='mapid'></div>
+<script>
+/*enables all map behavior*/
+mapboxgl.accessToken = 'pk.eyJ1IjoiZHlsYW5jIiwiYSI6Im53UGgtaVEifQ.RJiPqXwEtCLTLl-Vmd1GWQ';
+var start = [-111.8, 32.7];
+var end = [-77.50, 38];
+var mapvar = new mapboxgl.Map({
+//attributionControl: false,
+container: 'mapid',
+style: 'mapbox://styles/dylanc/cikb2yvtr00589fm13z417kdu',
+center: start,
+zoom: 9,
+
+});
+mapvar.doubleClickZoom.disable();
+mapvar.scrollZoom.disable();
+mapvar.dragPan.disable();
+mapvar.touchZoomRotate.disable();
+
+var isAtStart = true;
+
+function fly() {
+// depending on whether we're currently at point a or b, aim for
+// point a or b
+var target = isAtStart ? end : start;
+
+// and now we're at the opposite point
+isAtStart = !isAtStart;
+
+mapvar.flyTo({
+    // These options control the ending camera position: centered at
+    // the target, at zoom level 9, and north up.
+    center: target,
+    zoom: 10,
+    bearing: 0,
+
+    // These options control the flight curve, making it move
+    // slowly and zoom out almost completely before starting
+    // to pan.
+    speed: 0.012, // make the flying slow
+    curve: 0.01, // change the speed at which it zooms out
+
+    // This can be any easing function: it takes a number between
+    // 0 and 1 and returns another number between 0 and 1.
+    easing: function (t) {
+        return t;
+    }
+});
+}
+
+
+$( document ).ready(function() {
+  fly();
+});
+</script>
     
     <!--Contact Info Card-->
 	<div class="container">
@@ -74,16 +128,16 @@
 
 				<div id="contactinfofooter" class="row">
 					<div class="text-vertical-center col-xs-12 center-block">
+					<div id="contactinfofootersentense" class="text-vertical-center center-block">
+							<h4><i>Welcome to my self-built website. A showcase of my on-going post-college education. <br>Click below to learn more...</i></h4>
+					</div>
+					<button class="text-vertical-center center-block" onclick='fly();' id='fly'>Pause Map</button>
 					<div id="enter" class="text-vertical-center">
                     	<a href="#mainnav" class="btn btn-circle page-scroll text-vertical-center center-block grow" title="Click to Learn More" data-toggle="tooltip" data-placement="top">
                         <i class="fa fa-angle-double-down"></i>
                     	</a>
                     </div>
-
-					<button class="center-block" onclick='fly();' id='fly'>Pause Map</button>
-						<div id="contactinfofootersentense" class="col-xs-offset-2 col-xs-8">
-							<h4><i>Welcome to my self-built website. A showcase of my on-going post-college education. <br>Click below to learn more...</i></h4>
-						</div>
+						
 					</div>
 				</div>
 			</div>
